--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/elements": "^0.22.5",
+    "@clerk/nextjs": "^6.9.6",
     "@hookform/resolvers": "^3.9.1",
+    "@prisma/client": "^6.1.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
+    "next-cloudinary": "^6.16.0",
     "react": "^18",
     "react-big-calendar": "^1.17.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
+    "react-toastify": "^11.0.2",
     "recharts": "^2.15.0",
+    "ts-node": "^10.9.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -28,7 +34,11 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prisma": "^6.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
