--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,27 @@
-version:'3.8'
+version: "3.8"
 
 services:
-  postgres:
-    image: postgres:13
-    container_name: postgres_db
+  postgress:
+    image: postgres:15
+    container_name: postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgresdb
+      POSTGRES_USER: kendy
+      POSTGRES_PASSWORD: kendy0911
+      POSTGRES_DB: school
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
   app:
+    build: .
     container_name: nextjs_app
     ports:
       - "3000:3000"
-      environment:
-        - DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgresdb
-      depends_on:
-        - postgres
+    environment:
+      - DATABASE_URL: postgresql://kendy:kendy0911@localhost:5432/school
+    depends_on:
+      - postgres
+
+volumes:
+  postgres_data:
